force-app/main/default/objects/Officer__c/Officer__c.object-meta.xml
<CustomObject>
    <label>Officer</label>
    <nameField>
        <label>Officer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Officers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>