force-app/main/default/objects/Officer__c/fields/Inc_Exc__c.field-meta.xml
<CustomField>
    <fullName>Inc_Exc__c</fullName>
    <label>Inc/Exc</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Included</fullName>
            </value>
            <value>
                <fullName>Excluded</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>