force-app/main/default/objects/Officer__c/fields/Ownership_Pct__c.field-meta.xml
<CustomField>
    <fullName>Ownership_Pct__c</fullName>
    <label>Ownership Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>